2012-02-06
		* resolved small bug for select.mpt (wouldn't show aggregated FIA results
		when output = "full")
		
		* added show.messages parameter to fit.model, fit.mptinr and fit.mpt
		(including their documentation)
		
		* refitting for failed nlminb now uses multicore.

2012-02-04
		* small changes in Rd files for fit.model and fit.mptinr

2012-01-31
		* resolved small bug when fitting using mutlicore = "individual" 
		
		* changed Description
		
		* changed warning messages when optimization did not converge successfully.

2012-01-30
		* resolved small bug in calculating the FIA (moved routine to calculate 
		  the FIA to the wrapper functions fit.mpt and fit.model, changed argument
		  fia to fia.df in fit.mptinr). Changed fit.mptinr.Rd accordingly.
		
		* reading models should now work with connections (changed .get.mpt.model so that
		   connections are always read as "easy").
		
		* added function make.dt with help page (in make.eqn,.Rd)
		
		* added examples in fit.mptinr and fit.model
		
		* changed default starting values to c(0.1, 0.9).


2012-01-27
		* first release of MPTinR 0.8.x. changed fit.mpt and fit.model to be wrappers 
		  around fit.mptinr, which now uses nlminb.
		* fit.mpt.old is the old version of fit.mpt using otpim.
		* changed the rd files accordingly to reflect the changes above.

2012-01-18
		* fixed but in fit.model()'s lower and upper.bound arguments. Now works

2012-01-12
		* changed .find.mpt.params to rely on all.vars()
		* adapted fit.mpt() (creating parameters from inequality restrictions) to 
		  deal with the new .find.mpt.params() function (i.e., inequalities are 
		  parse()d prior to calling .find.mpt.params).
		* added fit.model(), a copy of fit.mpt() with parameter bounds as an argument

2011-06-30

		* R/fit.mpt.R: now starting value parameter works
		* Small bug removed when fitting one row from a data.frame (now, does not set multiFit to TRUE)

2011-06-29
